force-app/main/default/objects/Account/fields/Test_Email__c.field-meta.xml
<CustomField>
    <fullName>Test_Email__c</fullName>
    <label>Test Email</label>
    <type>Email</type>
</CustomField>