force-app/main/default/objects/Account/fields/TestDevopsCenter__c.field-meta.xml
<CustomField>
    <fullName>TestDevopsCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestDevopsCenter</label>
    <type>Checkbox</type>
</CustomField>