force-app/main/default/objects/Account/fields/TestText__c.field-meta.xml
<CustomField>
    <fullName>TestText__c</fullName>
    <label>TestText</label>
    <length>34</length>
    <type>Text</type>
</CustomField>